[project]
name = "interview-generation"
version = "0.1.0"
description = "Framework for coding interview question generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
